syntax = "proto3";

package torii.sinks.log;

// Log entry with timestamp and message
message LogEntry {
  uint64 id = 1;
  string message = 2;
  int64 timestamp = 3;
  uint64 block_number = 4;
  string event_key = 5;
}

// Request to query logs
message QueryLogsRequest {
  uint32 limit = 1; // Max number of logs to return (default: 5)
}

// Response with list of logs
message QueryLogsResponse {
  repeated LogEntry logs = 1;
}

// Log update for streaming
message LogUpdate {
  LogEntry log = 1;
  int64 timestamp = 2;
}

// LogSink service - provides log querying and subscriptions
service LogSink {
  // Query recent logs
  rpc QueryLogs(QueryLogsRequest) returns (QueryLogsResponse);

  // Subscribe to real-time log updates (server-side streaming)
  rpc SubscribeLogs(QueryLogsRequest) returns (stream LogUpdate);
}
